Fix spacing in contact section

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -5,6 +5,7 @@
   grid-template-columns: auto 1fr;
   align-content: center;
   align-items: center;
+  row-gap: 3vh;
 }
 
 .contact__heading {
